[gd_scene load_steps=7 format=2]

[ext_resource path="res://CustomCharacter/CustomCharacter.gd" type="Script" id=1]
[ext_resource path="res://Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/Main.tres" type="Theme" id=3]
[ext_resource path="res://Character/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://ClothesMenu/ClothesMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://ColorMenu/ColorMenu.tscn" type="PackedScene" id=6]

[node name="CustomCharacter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Window" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="Window"]
margin_right = 1280.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )

[node name="ClothesPanel" type="HBoxContainer" parent="Window"]
margin_top = 39.0
margin_right = 1280.0
margin_bottom = 627.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="Window/ClothesPanel"]
margin_right = 100.0
margin_bottom = 588.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 7

[node name="PanelContainer" type="VBoxContainer" parent="Window/ClothesPanel"]
margin_left = 104.0
margin_right = 604.0
margin_bottom = 588.0

[node name="TopMargin" type="Label" parent="Window/ClothesPanel/PanelContainer"]
margin_right = 500.0
margin_bottom = 90.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 7

[node name="ClothesMenu" parent="Window/ClothesPanel/PanelContainer" instance=ExtResource( 5 )]
margin_top = 94.0
margin_bottom = 494.0

[node name="BottomMargin" type="Label" parent="Window/ClothesPanel/PanelContainer"]
margin_top = 498.0
margin_right = 500.0
margin_bottom = 588.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 7

[node name="BottomMenu" type="HBoxContainer" parent="Window"]
margin_top = 631.0
margin_right = 1280.0
margin_bottom = 681.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="LeftMargin" type="Label" parent="Window/BottomMenu"]
margin_right = 173.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Appearance" type="Button" parent="Window/BottomMenu"]
margin_left = 177.0
margin_right = 392.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Appearance"

[node name="MidMargin1" type="Label" parent="Window/BottomMenu"]
margin_left = 396.0
margin_right = 569.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Save" type="Button" parent="Window/BottomMenu"]
margin_left = 573.0
margin_right = 746.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Save"

[node name="MidMargin2" type="Label" parent="Window/BottomMenu"]
margin_left = 750.0
margin_right = 923.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Cancel" type="Button" parent="Window/BottomMenu"]
margin_left = 927.0
margin_right = 1100.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Cancel"

[node name="BottomMargin" type="Label" parent="Window/BottomMenu"]
margin_left = 1104.0
margin_right = 1280.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="BottomMargin" type="Label" parent="Window"]
margin_top = 685.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 35 )

[node name="Right" type="Button" parent="."]
margin_left = 1200.0
margin_top = 420.0
margin_right = 1222.0
margin_bottom = 453.0
size_flags_vertical = 0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="."]
margin_left = 980.0
margin_top = 420.0
margin_right = 1002.0
margin_bottom = 453.0
size_flags_vertical = 0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" parent="." instance=ExtResource( 4 )]
position = Vector2( 1100, 400 )
scale = Vector2( 1.5, 1.5 )

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorMenu" parent="." instance=ExtResource( 6 )]
margin_left = 500.0
margin_top = 50.0
margin_right = 1000.0
margin_bottom = 650.0
[connection signal="pressed" from="Window/BottomMenu/Appearance" to="." method="_on_Appearance_pressed"]
[connection signal="pressed" from="Window/BottomMenu/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Overlay/TextureButton" to="." method="_on_TextureButton_pressed"]
